30-applications/Applications/ai/librechat/extras/service-rag.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-rag
spec:
  selector:
    app: librechat-rag
  ports:
    - port: 8000
      targetPort: 8000
