30-applications/Applications/ai/librechat/extras/service-vectordb.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-vectordb
spec:
  selector:
    app: librechat-vectordb
  ports:
    - port: 5432
      targetPort: 5432
